# app-preflight

./: .gitignore  BACKLOG.md  CHECKS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml  deny.toml  preflight.example.toml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/android/: Cargo.toml
crates/android/src/: binary.rs  lib.rs  permissions.rs  project.rs
crates/android/src/binary/: dex.rs  elf.rs  manifest.rs  mod.rs
crates/android/src/checks/: backup.rs  cleartext.rs  debuggable.rs  exported.rs  exported_provider.rs  foreground_service.rs  mod.rs  network_security_config.rs  r8_keep_rules.rs  sensitive_permissions.rs  shared_user_id.rs  special_permissions.rs  target_sdk.rs  test_only.rs
crates/android/src/metadata/: auth.rs  checks.rs  client.rs  mod.rs  model.rs
crates/android/tests/: android.rs  apk.rs  play_metadata.rs
crates/android/tests/fixtures/: test_rsa_private.pem  test_rsa_public.pem
crates/cli/: Cargo.toml
crates/cli/src/: baseline.rs  init.rs  main.rs  render.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: check.rs  config.rs  finding.rs  lib.rs  report.rs  scan.rs
crates/ios/: Cargo.toml
crates/ios/src/: lib.rs  project.rs
crates/ios/src/binary/: checks.rs  extract.rs  mod.rs
crates/ios/src/checks/: account_deletion.rs  ats.rs  ats_exceptions.rs  banned_terms.rs  dart_defines.rs  encryption.rs  entitlements.rs  ios17_permissions.rs  l10n_arb.rs  language_claims.rs  location.rs  mod.rs  orientation.rs  password_reset.rs  pbxproj.rs  privacy_manifest.rs  sign_in_with_apple.rs  store_text.rs  telemetry.rs  url_schemes.rs  usage_descriptions.rs  versioning.rs
crates/ios/src/metadata/: auth.rs  checks.rs  client.rs  mod.rs  model.rs  submit_sim.rs
crates/ios/tests/: binary.rs  ios.rs  metadata.rs
crates/ios/tests/fixtures/: test_ec_private.pem  test_ec_public.pem
docs/: index.html
examples/android-sample/app/: build.gradle.kts
examples/android-sample/app/src/main/: AndroidManifest.xml
examples/ios-sample/: Auth.swift  Info.plist  MyApp.entitlements
