[package]
name = "preflight-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pre-submission checker for iOS and Android apps — catch App Store / Play rejections before you ship."

[[bin]]
name = "preflight"
path = "src/main.rs"

[dependencies]
preflight-core = { workspace = true }
preflight-ios = { workspace = true }
preflight-android = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
