[package]
name = "preflight-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for app-preflight: findings, severities, reports and config."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
