[package]
name = "preflight-ios"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "iOS project analyzers and App Store rejection checks for app-preflight."

[dependencies]
preflight-core = { workspace = true }
plist = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
jsonwebtoken = { workspace = true }
zip = { workspace = true }
goblin = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
zip = { workspace = true }
